--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ dist-ssr
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+###########################################################
+########### MY IGNORES ####################################
+
+notes.notes
